2003-10-28  Pavel Roskin  <proski@gnu.org>

	* configure.in: Don't check if "file" can use stdin - it's
	unused now.

2003-10-25  Pavel Roskin  <proski@gnu.org>

	* extraconf.h: Don't define HAVE_GRANTPT forcedly if grantpt()
	wasn't found.  Don't define HAVE_CRYPT, it's unused now.

	* configure.in: Remove check for socketpair().  Add new option
	--enable-background.
	* extraconf.h: Don't define WITH_BACKGROUND.

2003-10-14  Pavel Roskin  <proski@gnu.org>

	* configure.in: Don't check for seekdir() and telldir().

2003-09-23  Pavel Roskin  <proski@gnu.org>

	* doc/sr/Makefile.am: Don't install mcserv documentation if mcfs
	support is disabled.

	* lib/*.ti: Remove, these files are obsolete.
	* lib/tdiff: Likewise.
	* lib/xterm.tcap: Likewise.
	* lib/Makefile.am: Remove obsolete files.  Don't install
	README.xterm and xterm.ad, there are partly obsolete and can
	break things if used as is.

2003-09-22  Strahinya Radich  <mr99164@alas.matf.bg.ac.yu>

	* lib/mc.hint.sr: Updated.
	* lib/mc.menu.sr: New file - translated menu.
	* lib/Makefile.am: Add mc.menu.sr.
	* doc/sr/: New Serbian documentation.
	* doc/Makefile.am: Add "sr" directory.
	* configure.in: Add substitutions for new files.

2003-09-22  Pavel Roskin  <proski@gnu.org>

	* configure.in: Check for strlcpy() is glib 1.2.x is used.

2003-09-11  Strahinya Radich  <mr99164@alas.matf.bg.ac.yu>

	* lib/mc.hint.sr: New file - Serbian hints.

2003-09-04  Pavel Roskin  <proski@gnu.org>

	* lib/mc.menu: Add entry for viewing manual pages.

2003-08-18  Pavel Roskin  <proski@gnu.org>

	* lib/mc-wrapper.csh.in: Use "id" command to find the real user
	id.  $USER is not reliable.
	* lib/mc-wrapper.sh.in: Likewise.
	Reported by Figura Peter <peterf@autus.sk>

2003-08-18  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* acinclude.m4 (MC_WITH_NCURSES): Fix ESCDELAY check on Solaris.
	Make sure that linking succeeds.

2003-08-02  Pavel Roskin  <proski@gnu.org>

	* lib/cedit.menu: Avoid using "id -u", it doesn't work on