@@ -1,3 +1,8 @@
+2003-10-29  Pavel Roskin  <proski@gnu.org>
+
+	* acinclude.m4 (MC_WITH_VFS): Use AC_SEARCH_LIBS when possible.
+	Allow disabling network code by --disable-netcode.
+
 2003-10-28  Pavel Roskin  <proski@gnu.org>
 
 	* configure.in: Don't check if "file" can use stdin - it's
